--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,24 @@
 <!-- navbar-start -->
-<nav class="navbar navbar-expand-lg  fixed-top">
+<nav class="navbar navbar-expand-lg  fixed-top" [ngStyle]="navbg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">SHOWTIME</a>
+    <a class="navbar-brand" routerLink="">NETFLIX</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Search</a>
+          <a class="nav-link" routerLink="search">Search</a>
         </li>
         
       </ul>
     </div>
   </div>
 </nav>
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum perspiciatis voluptatem consectetur, dolore cupiditate explicabo quidem. Sapiente odit tenetur sint aliquid, dignissimos facilis sequi sed et dolor, hic repellat numquam?
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptatibus debitis corporis ex, vel quae nam, natus voluptate eos voluptates, esse quasi libero consequatur voluptas ratione in ut unde pariatur?
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis vero et non, explicabo eveniet mollitia. Eveniet, sit officiis. Omnis possimus praesentium, quod incidunt architecto nobis veniam ipsum obcaecati numquam sint?
-</p>
+
 
 <!-- navbar end -->
 <router-outlet></router-outlet>
