--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000" *ngFor="let b of bannerResult;let i=index"
-          [ngClass]="{active:i===1}">
+          [ngClass]="{active:i===1} ">
           <img src="https://image.tmdb.org/t/p/original/{{ b.backdrop_path }}" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h2>{{b.original_title}}</h2>
@@ -27,17 +27,101 @@
   <!-- banner ends -->
 
   <div class="contain mt-3 p-4">
-    <!-- treni dng movies -->
+    <!-- trenidng movies -->
     <div class="row">
         <h5 class="text-white">Trending Movies</h5>
         <div class="rowposter mt-3 p-2" >
             <ng-container *ngFor="let t of  trendingMovieResult">
+              
                 <img src="https://image.tmdb.org/t/p/original/{{ t.poster_path }}" 
             class="rowing largeposter" alt="..." 
+            [routerLink]="['/movie',t.id]">
             >
             </ng-container>
             
             
         </div>
     </div>
+
+      <!-- action movies -->
+      <div class="row mt-4">
+        <h5 class="text-white">Action Movies</h5>
+        <div class="rowposter mt-3 p-2" >
+            <ng-container *ngFor="let a of  actionMovieResult">
+              
+                <img src="https://image.tmdb.org/t/p/original/{{ a.poster_path }}" 
+            class="rowing largeposter" alt="..." 
+            [routerLink]="['/movie',a.id]">
+            >
+            </ng-container>
+            
+            
+        </div>
+    </div>
+     <!-- adventure movies -->
+     <div class="row mt-4">
+        <h5 class="text-white">Adventure Movies</h5>
+        <div class="rowposter mt-3 p-2" >
+            <ng-container *ngFor="let ad of  adventureMovieResult">
+              
+                <img src="https://image.tmdb.org/t/p/original/{{ ad.poster_path }}" 
+            class="rowing largeposter" alt="..." 
+            [routerLink]="['/movie',ad.id]">
+            >
+            </ng-container>
+            
+            
+        </div>
+    </div>
+    <!-- comedyMovie movies -->
+    <div class="row mt-4">
+        <h5 class="text-white">comedy Movies</h5>
+        <div class="rowposter mt-3 p-2" >
+            <ng-container *ngFor="let c of  comedyMovieResult">
+              
+                <img src="https://image.tmdb.org/t/p/original/{{ c.poster_path }}" 
+            class="rowing largeposter" alt="..." 
+            [routerLink]="['/movie',c.id]">
+            >
+            </ng-container>
+            
+            
+        </div>
+    </div>
+
+    <!-- animationMovie movies -->
+    <div class="row mt-4">
+        <h5 class="text-white">Animation Movies</h5>
+        <div class="rowposter mt-3 p-2" >
+            <ng-container *ngFor="let a of animationMovieResult">
+              
+                <img src="https://image.tmdb.org/t/p/original/{{ a.poster_path }}" 
+            class="rowing largeposter" alt="..." 
+            [routerLink]="['/movie',a.id]">
+            >
+            </ng-container>
+            
+            
+        </div>
+    </div>
+    <!-- sciencefictionMovie -->
+    
+      <div class="row mt-4">
+        <h5 class="text-white">Sciencefiction Movies</h5>
+        <div class="rowposter mt-3 p-2" >
+            <ng-container *ngFor="let s of sciencefictionMovieResult">
+              
+                <img src="https://image.tmdb.org/t/p/original/{{ s.poster_path }}" 
+            class="rowing largeposter" alt="..." 
+            [routerLink]="['/movie',s.id]">
+            <!-- <h4>{{s.title}}</h4> -->
+        </ng-container>
+        
+            
+        
+            
+            
+        </div>
+    </div>
+    
   </div>
